# simperium-c

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  conanfile.py  readme.md  simperium.h  simple
examples/todo_add_remove/: Makefile  todo_add_remove.c
examples/todo_changes/: Makefile  todo_changes.c
examples/todo_ws/: Makefile  todo_ws.c
lib/: argtable3.mk
src/: endpoints.h  simperium_auth.c  simperium_bucket.c  simperium_bucket_http.c  simperium_bucket_ws.c  simperium_endpoints.h  simperium_private.h  simple.c
